refactor(scheduler): add scheduler to log context